--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-helmet-async": "^2.0.4",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-star-ratings": "^2.3.0",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
